# lockc

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dapper  Makefile  README.md  Vagrantfile  build.rs  containerized-build.sh  meson.build  meson_options.txt
.cargo/: config.toml
.github/workflows/: container-image.yml  mdbook.yml  rust.yml
contrib/crio/: 00-default.conf
contrib/etc/containerd/: config.toml  config.toml.in
contrib/etc/crio/: 00-default.conf.in
contrib/etc/docker/: daemon.json  daemon.json.in
contrib/etc/lockc/: lockc.toml
contrib/etc/sysconfig/: lockc
contrib/etc/sysctl.d/: 99-k8s.conf
contrib/guestfs/: build.sh  install-lockc.sh  provision.sh  reinstall-custom-kernel.sh
contrib/guestfs/provision/: kernel.sh  provision.sh
contrib/guestfs/provision/etc/containerd/: config.toml
contrib/guestfs/provision/etc/docker/: daemon.json
contrib/guestfs/provision/systemd/: containerd.service
contrib/helm/: README.md
contrib/helm/lockc/: Chart.yaml  values.yaml
contrib/helm/lockc/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  daemonset-agent.yaml  daemonset-lockcd.yaml  daemonset.yaml  runtimeclass.yaml  serviceaccount.yaml
contrib/kubernetes/: kubewarden.yaml  lockc.yaml  registry.yaml
contrib/provision/: base.sh  build.sh  control-plane-base.sh  control-plane.sh  vagrant-fix.sh
contrib/systemd/: containerd.service  enclave.service  enclaved.service  lockc.service.in  lockcd.service  lockcd.service.in
contrib/terraform/: .gitignore
contrib/terraform/libvirt/: control-plane.tf  deploy-kubernetes.sh  kubernetes.tf  main.tf  output.tf  provision-docker.sh  provision-k8s-containerd-cp.sh  provision-k8s-containerd.sh  terraform.tfvars.json.example  variables.tf  worker.tf
contrib/terraform/libvirt/cloud-init/: commands.tpl  common.tpl  control-plane.tpl  repository.tpl  worker.tpl
contrib/terraform/openstack/: deploy-kubernetes.sh  dns.tf  kubernetes.tf  load-balancer.tf  master-instance.tf  network.tf  output.tf  provision-k8s-containerd-cp.sh  provision-k8s-containerd.sh  provision.sh  security-groups-common.tf  security-groups-load-balancer.tf  security-groups-master.tf  terraform.tfvars.example  variables.tf  versions.tf  worker-instance.tf
contrib/terraform/openstack/cloud-init/: commands.tpl  common.tpl  repository.tpl
contrib/vagrant/: addons.sh  base.sh  build.sh  control-plane-base.sh  control-plane.sh  kubeconfig.sh  vagrant-fix.sh
docs/: book.toml
docs/src/: README.md  SUMMARY.md  architecture.md  configuration.md  containers-do-not-contain.md
docs/src/demos/: README.md  mount.md
docs/src/developers/: README.md  repositories.md
docs/src/developers/terraform/: README.md  libvirt.md  openstack.md
docs/src/install/: README.md  docker.md  kubernetes.md
docs/src/policies/: README.md  file-access.md  mount.md  syslog.md
docs/src/terraform/: README.md  base-image.md  conf-libvirt.md  custom-kernel.md  libvirt.md  openstack.md  start-vm.md
docs/src/tuning/: README.md
docs/src/use/: README.md
enclave/: Cargo.toml  build.rs
enclave/src/: main.rs
enclave/src/bpf/: vmlinux.h
examples/kubernetes/: deployments-should-fail.yaml  deployments-should-succeed.yaml  namespaces.yaml  nginx-should-fail.yaml  nginx-should-succeed.yaml
lockc/: Cargo.toml  build.rs
lockc-common/: Cargo.toml
lockc-common/src/: lib.rs
lockc-ebpf/: Cargo.toml
lockc-ebpf/src/: main.rs  maps.rs  policy.rs  proc.rs  vmlinux.rs
lockc-uprobes/: Cargo.toml
lockc-uprobes/src/: lib.rs
lockc/src/: bpfstructs.rs  communication.rs  k8s_agent_api.rs  lib.rs  load.rs  main.rs  maps.rs  runc.rs  settings.rs  sysutils.rs  uprobe_ext.rs
lockc/src/bpf/: compiler.h  limits.h  lockc.bpf.c  map_structs.h  maps.h  mod.rs  strutils.h
lockctl/: Cargo.toml
lockctl/src/: main.rs
scripts/: btf.sh  cargo.sh  container-build.sh  entrypoint.sh  libbpf.sh  mdbook.sh  test.sh
src/: bpfstructs.rs  lib.rs  meson.build  settings.rs
src/bpf/: enclave.bpf.c  limits.h  lockc.bpf.c  lockc.skel.rs  map_structs.h  maps.h  meson.build  mod.rs  policy.h  strutils.h  vmlinux-opensuse-5.12.0-2.h
xtask/: Cargo.toml
xtask/src/: bintar.rs  build_ebpf.rs  codegen.rs  install.rs  main.rs  run.rs
