[package]
name = "lockc"
version = "0.1.0"
authors = ["Michal Rostecki <mrostecki@opensuse.org>"]
edition = "2018"

description = "eBPF-based MAC security audit for container workloads"
repository = "https://github.com/rancher-sandbox/lockc"
keywords = ["bpf", "containers", "ebpf", "linux", "security"]
license = "Apache-2.0 AND GPL-2.0-or-later"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "lockc"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
bindgen = "0.59"
byteorder = "1.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = { version = "0.11", default-features = false, features = ["toml"] }
futures = "0.3"
kube = "0.57"
k8s-openapi = { version = "0.12", default-features = false, features = ["v1_21"] }
lazy_static = "1.4"
libc = { version = "0.2", features = [ "extra_traits" ] }
libbpf-rs = "0.12"
nix = "0.22"
plain = "0.2"
procfs = "0.10"
regex = { version = "1.5", default-features = false, features = ["perf"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.7", features = ["macros", "process", "rt-multi-thread"] }
uuid = { version = "0.8", default-features = false, features = ["v4"] }

[build-dependencies]
anyhow = "1.0"
bindgen = "0.59"
libbpf-cargo = "0.9"
thiserror = "1.0"
