[package]
name = "lockc-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
cli = [ "clap" ]
user = [ "aya", "thiserror" ]

[dependencies]
aya = { version = "0.11", optional = true }
clap = { version = "4.1", optional = true }
thiserror = { version = "1.0", optional = true }

[lib]
path = "src/lib.rs"