[package]
name = "lockc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log = "0.1"
bytes = "1.1"
lockc-common = { path = "../lockc-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "3.1", features = ["derive", "env"] }
config = "0.13"
fanotify-rs = { git = "https://github.com/vadorovsky/fanotify-rs", branch = "fix-pid-type" }
kube = { version = "0.71", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.14", features = ["v1_23"] }
libc = "0.2.102"
log = "0.4"
nix = "0.24"
procfs = "0.12"
regex = { version = "1.5", default-features = false, features = ["perf", "std"] }
scopeguard = "1.1"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
tracing = "0.1"
tracing-core = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

[dev-dependencies]
tempfile = "3.3"

[[bin]]
name = "lockc"
path = "src/main.rs"
