[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = {version = "0.3", default-features = false }
aya-gen = { git = "https://github.com/aya-rs/aya", branch = "main" }
anyhow = "1"
flate2 = "1.0"
fs_extra = "1.2"
scopeguard = "1.1"
serde = { version = "1.0", features = ["derive"] }
sudo = "0.6"
tar = "0.4"
tempfile = "3.3"
tera = "1.15"
thiserror = "1.0"
